Fix image download path in ImageCreated event and add endpoint to get card image
